syntax = "proto3";
package isuxportal.proto.services.admin;
option go_package = "github.com/isucon/isucon10-portal/proto/services/admin";

import "isuxportal/resources/team.proto";

message ListTeamsRequest {
}

message ListTeamsResponse {
  repeated TeamListItem teams = 1;
  message TeamListItem {
    int64 team_id = 1;
    string name = 2;
    repeated string member_names = 3;
    bool final_participation = 4;
    bool is_student = 5;
    bool withdrawn = 6;
    bool disqualified = 7;
  }
}

message GetTeamRequest {
  int64 id = 1;
}

message GetTeamResponse {
  Team team = 1;
}

message UpdateTeamRequest {
  Team team = 1;
  repeated Contestant contestants = 2;
}

message UpdateTeamResponse {
}
