syntax = "proto3";
package isucon10_portal.proto.services.registration;
option go_package = "github.com/isucon/isucon10-portal/proto/services/registration";

message JoinTeamRequest {
  string invite_token = 1;
  string name = 2;
}

message JoinTeamResponse {
}
